Refactor AllPermitBannersController